--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
     <div class="messages" id="messages">
         <div class="message bot-message">
             <div class="message-content">Hello! How can I assist you today?</div>
-            <div class="timestamp">{{ moment().format('HH:mm') }}</div>
+            <div class="timestamp" data-time="initial"></div>
         </div>
     </div>
     
